[gd_scene load_steps=8 format=3 uid="uid://qet6pr3d3bf0"]

[ext_resource type="Texture2D" uid="uid://cljt5t4b7tmko" path="res://Assets/Cliente3D/Sadako_Idle.png" id="1_1v0ok"]
[ext_resource type="Script" path="res://Assets/Cliente3D/ClienteScript3D.gd" id="1_w8jg3"]
[ext_resource type="Script" path="res://Assets/Cliente3D/Timer3D.gd" id="2_k0ipn"]
[ext_resource type="Texture2D" uid="uid://bqy52o2smsp4" path="res://Assets/UI/patiencebarBG.png" id="3_i0ose"]
[ext_resource type="Texture2D" uid="uid://ckwhw7qi6jp78" path="res://Assets/UI/patiencebarPROG.png" id="4_r4kla"]
[ext_resource type="Script" path="res://Assets/Cliente/texture_progress_bar.gd" id="5_kigw0"]

[sub_resource type="ViewportTexture" id="ViewportTexture_42gur"]
viewport_path = NodePath("Node3D/SubViewport")

[node name="Cliente" type="Node3D"]
script = ExtResource("1_w8jg3")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.340383, 2.08933, 13.4751)

[node name="SadakoIdle" type="Sprite3D" parent="."]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, 0, 0, 0)
texture = ExtResource("1_1v0ok")

[node name="Timer3D" type="Timer" parent="."]
wait_time = 20.0
autostart = true
script = ExtResource("2_k0ipn")

[node name="Node3D" type="Node3D" parent="."]

[node name="SubViewport" type="SubViewport" parent="Node3D"]
transparent_bg = true

[node name="Paciencia" type="TextureProgressBar" parent="Node3D/SubViewport"]
offset_right = 512.0
offset_bottom = 512.0
max_value = 20.0
step = 0.01
value = 20.0
fill_mode = 4
texture_under = ExtResource("3_i0ose")
texture_progress = ExtResource("4_r4kla")
script = ExtResource("5_kigw0")

[node name="Sprite3D" type="Sprite3D" parent="Node3D"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -0.340383, 74.4382, 0)
texture = SubResource("ViewportTexture_42gur")

[connection signal="aumentarDificultad" from="Timer3D" to="Node3D/SubViewport/Paciencia" method="_on_timer_3d_aumentar_dificultad"]
[connection signal="timeout" from="Timer3D" to="." method="_on_timer_3d_timeout"]
